--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -113,6 +113,7 @@
             background-color: $primaryColor;
             color: white;
             font-weight: bold;
+            cursor: pointer;
         }
         .pizza__cardTitle{
             font-size: 20px;
