--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,11 +1,10 @@
 //Misc
 @import './misc/variables';
-@import './misc/mixins';
 @import './misc/normalize';
 
 // Partials
 @import './partials/header';
-@import './partials/footer';
 
 // Views
 @import './views/home';
+@import './views/cart';
