--- a/scss/views/_cart.scss
+++ b/scss/views/_cart.scss
@@ -1,90 +1,208 @@
-.maintwo{
-    margin-top: 10px;
+.carrito{
     width: 100%;
+    margin-top: 60px;
 
-    .main__containertwo{
+    .carrito__container{
         width: 85%;
-        height: 460px;
         margin: 0 auto;
+        height: 540px;
         display: flex;
-        justify-content: start;
-        align-items: center;
-        flex-direction: column;
+        justify-content: space-evenly;
 
-        .main__selections{
-            width: 70%;
-            height: 60px;
-            display: flex;
+        .carrito__productos{
+            width: 42%;
+            height: 100%;
 
-            .main__selectionValueOne{
-                width: 50%;
-                border-radius: 15px 0px 0px 0px;
+            .carrito__productosTitulo{
+                width: 100%;
+                height: 90px;
                 background-color: $primaryColor;
-                text-align: center;
-                line-height: 58px;
-                color: white;
-                font-weight: bold;
-                border-right: 1px white solid;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 15px 15px 0 0;
             }
+            .carrito__productosTitulo h2{
+                color: white;
+            }
+            .carrito__bebida{
+                width: 100%;
+                height: 90px;
+                display: flex;
+                border: 1px #BDBDBD solid;
+                border-top: none;
 
-            .main__selectionValueTwo{
-                @extend .main__selectionValueOne;
-                border-radius: 0px 15px 0px 0px;
-                border-right: 0px;
+                .carrito__imgBebida{
+                    width: 20%;
+                    height: 100%;
+                }
+                .carrito__imgBebida img{
+                    width: 100%;
+                    height: 100%;
+                }
+                .carrito__desBebida{
+                    width: 50%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                .carrito__desBebida p{
+                    font-weight: bold;
+                    font-size: 20px;
+                }
+                .carrito__bebida-btn{
+                    width: 30%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                .carrito__bebida-btn button{
+                    @include btn2;
+                }
+            }
+            .carrito__delivery{
+                width: 100%;
+                height: 90px;
+                display: flex;
+                border: 1px #BDBDBD solid;
+                border-top: none;
+
+                .carrito__imgdelivery{
+                    width: 20%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                .carrito__imgdelivery img{
+                    width: 80%;
+                    height: 80%;
+                }
+                .carrito__desdelivery{
+                    width: 50%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                .carrito__desdelivery p{
+                    font-weight: bold;
+                    font-size: 20px;
+                }
+                .carrito__delivery-btn{
+                    width: 30%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                .carrito__delivery-btn button{
+                    @include btn2;
+                }
+            }
+            .carrito__pizzas{
+                width: 100%;
+                height: 90px;
+                display: flex;
+                border: 1px #BDBDBD solid;
+                border-top: none;
             }
         }
-        .main__options{
-            @extend .main__selections;
+        .carrito__listaContainer{
+            width: 42%;
+            height: 100%;
+        }
+        .carrito__lista{
+            width: 100%;
 
-            .main__optionValue{
-                @extend .main__selectionValueOne;
-                background-color: white;
-                border-radius: 0px;
-                color: black;
-                border: 1px grey solid;
+            .carrito__listaTitulo{
+                width: 100%;
+                height: 90px;
+                background-color: $primaryColor;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 15px 15px 0 0;
             }
-            .main__optionValuetwo{
-                @extend .main__optionValue;
-                border-left: 0px;
+            .carrito__listaTitulo h2{
+                color: white;
+            }
+            .carrito__productoSeleccionado{
+                width: 100%;
+                height: 90px;
+                display: flex;
+                border: 1px #BDBDBD solid;
+                border-top: none;
+
+                .carrito__nombreProducto{
+                    width: 75%;
+                    height: 100%;
+                    border-right: 1px #BDBDBD solid;
+                    display: flex;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    font-weight: bold;
+                    font-size: 20px;
+                }
+                .carrito__productoPrecio{
+                    width: 25%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    font-weight: bold;
+                    font-size: 20px;
+                }
+            }
+            .carrito__productoAgg{
+                @include divBase;
+            }
+            .carrito__nombreProductoAgg{
+                width: 75%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-right: 1px #BDBDBD solid;
+            }
+            .carrito__PrecioProductoAgg{
+                width: 25%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            .hidden{
+                display: none;
             }
         }
-        .main__btn{
-            @extend .main__selections;
+        .carrito__listaTotal{
+            width: 100%;
+            height: 90px;
+            display: flex;
+            border-radius: 0px 0px 15px 15px;
 
-            .main__btnbox{
-                @extend .main__selectionValueOne;
-                background-color: white;
+            .carrito__listaTitulo{
+                width: 75%;
+                height: 100%;
+                background-color: $primaryColor;
                 border-radius: 0px 0px 0px 15px;
-                border: 1px grey solid;
-                border-top: 0px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
             }
-
-            .main__btnboxtwo{
-                @extend .main__selectionValueOne;
-                background-color: white;
-                border-radius: 0px 0px 15px 0px;
-                border: 1px grey solid;
-                border-top: 0px;
-                border-left: 0px;
-            }
-            
-            #btn-cancelar{
-                padding: 15px 164px;
-                border-radius: 0px 0px 0px 15px;
-                border: none;
-                background-color: #AE0000;
+            .carrito__listaTitulo h2{
                 color: white;
-                font-weight: bold;
-                cursor: pointer;
+                text-transform: uppercase;
             }
-            #btn-aceptar{
-                padding: 23px 188px;
+            .carrito__total{
+                width: 25%;
+                height: 100%;
                 border-radius: 0px 0px 15px 0px;
-                border: none;
-                background-color: green;
-                color: white;
-                font-weight: bold;
-                cursor: pointer;
+                border-right: 1px #BDBDBD solid;
+                border-bottom: 1px #BDBDBD solid;
             }
         }
     }
