--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -75,18 +75,18 @@
         width: 85%;
         margin: 0 auto;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         flex-wrap: wrap;
-        gap: 70px;
 
         .pizza__card{
-            width: 270px;
+            width: 320px;
             height: 500px;
             border: 2px #BDBDBD solid;
             border-radius: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-top: 50px;
         }
         .pizza__card img{
             width: 100%;
@@ -105,8 +105,8 @@
             background-color: white;
         }
         .pizza__card button{
-            width: 85%;
-            margin-top: 15px;
+            width: 200px;
+            margin-top: 20px;
             padding: 12px 0px;
             border-radius: 20px;
             border: none;
@@ -119,12 +119,12 @@
             font-size: 20px;
             font-weight: bold;
             text-align: center;
-            margin-top: 5px;
+            margin-top: 15px;
         }
         .pizza__cardDescription{
             color: #777;
             text-align: center;
-            margin-top: 8px;
+            margin-top: 14px;
         }
         .pizza__price{
             @extend .pizza__cardTitle;
@@ -132,4 +132,14 @@
             margin-top: 15px;
         }
     }
+}
+.hide{
+    display: none;
+}
+
+.goToCart{
+    position:sticky;
+    bottom: 50px;
+    left: 80rem;
+    @include btn;
 }
