--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,8 @@ p {
     .pizza .pizza__container .pizza__cardDescription {
       color: #777;
       text-align: center;
-      margin-top: 14px; }
+      margin-top: 14px;
+      font-size: 16px; }
     .pizza .pizza__container .pizza__price {
       font-size: 25px;
       margin-top: 15px; }
@@ -266,7 +267,8 @@ p {
         height: 90px;
         display: flex;
         border: 1px #BDBDBD solid;
-        border-top: none; }
+        border-top: none;
+        border-radius: 0 0 15px 15px; }
         .carrito .carrito__container .carrito__productos .carrito__delivery .carrito__imgdelivery {
           width: 20%;
           height: 100%;
@@ -299,12 +301,6 @@ p {
           color: white;
           cursor: pointer;
           font-weight: bold; }
-      .carrito .carrito__container .carrito__productos .carrito__pizzas {
-        width: 100%;
-        height: 90px;
-        display: flex;
-        border: 1px #BDBDBD solid;
-        border-top: none; }
     .carrito .carrito__container .carrito__listaContainer {
       width: 42%;
       height: 100%; }
@@ -370,19 +366,93 @@ p {
       display: flex;
       border-radius: 0px 0px 15px 15px; }
       .carrito .carrito__container .carrito__listaTotal .carrito__listaTitulo {
-        width: 75%;
+        width: 50%;
         height: 100%;
-        background-color: #F44A25;
         border-radius: 0px 0px 0px 15px;
+        border-right: 1px #BDBDBD solid;
+        border-bottom: 1px #BDBDBD solid;
+        border-left: 1px #BDBDBD solid;
         display: flex;
         justify-content: center;
         align-items: center; }
-      .carrito .carrito__container .carrito__listaTotal .carrito__listaTitulo h2 {
-        color: white;
-        text-transform: uppercase; }
       .carrito .carrito__container .carrito__listaTotal .carrito__total {
-        width: 25%;
+        width: 50%;
         height: 100%;
         border-radius: 0px 0px 15px 0px;
         border-right: 1px #BDBDBD solid;
-        border-bottom: 1px #BDBDBD solid; }
+        border-bottom: 1px #BDBDBD solid;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+      .carrito .carrito__container .carrito__listaTotal .carrito__cancelar {
+        padding: 10px;
+        background-color: #F44A25;
+        border: none;
+        border-radius: 15px;
+        color: white;
+        cursor: pointer;
+        font-weight: bold; }
+      .carrito .carrito__container .carrito__listaTotal .carrito__aceptar {
+        padding: 10px;
+        background-color: #F44A25;
+        border: none;
+        border-radius: 15px;
+        color: white;
+        cursor: pointer;
+        font-weight: bold; }
+
+.form__container {
+  width: 700px;
+  height: 600px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px; }
+  .form__container .form__titulo {
+    width: 100%;
+    height: 100px;
+    background-color: #F44A25;
+    border-radius: 15px 15px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .form__container .form__titulo h2 {
+    color: white;
+    font-size: 23px; }
+  .form__container .form__datos {
+    width: 100%;
+    height: 350px;
+    border-left: 1px #BDBDBD solid;
+    border-right: 1px #BDBDBD solid;
+    border-bottom: 1px #BDBDBD solid;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 20px 100px 0px 100px; }
+  .form__container .form__datos input {
+    margin-bottom: 12px; }
+  .form__container .form__btnSection {
+    width: 100%;
+    height: 100px;
+    border-left: 1px #BDBDBD solid;
+    border-right: 1px #BDBDBD solid;
+    border-bottom: 1px #BDBDBD solid;
+    border-radius: 0px 0px 15px 15px;
+    display: flex; }
+    .form__container .form__btnSection .form__cancelar, .form__container .form__btnSection .form__aceptar {
+      width: 50%;
+      height: 100%;
+      border-right: 1px #BDBDBD solid;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .form__container .form__btnSection .form__cancelar button, .form__container .form__btnSection .form__aceptar button {
+      padding: 15px 30px;
+      background-color: #F44A25;
+      border: none;
+      border-radius: 15px;
+      color: white;
+      cursor: pointer;
+      font-weight: bold; }
+    .form__container .form__btnSection .form__aceptar {
+      border: none; }
