--- a/scss/views/_home.scss
+++ b/scss/views/_home.scss
@@ -125,6 +125,7 @@
             color: #777;
             text-align: center;
             margin-top: 14px;
+            font-size: 16px;
         }
         .pizza__price{
             @extend .pizza__cardTitle;
